# clonk

./: .clang-tidy  .clangd  .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  compile_flags.txt  editor.nix  expr.c  first.ka  flake.nix  lexer.h  main.c  todo
book/dev/: parser.md  predict.drawio
include/: clonk.h  lexer.h  parser.h  predict.h  private.h  semantics.h
include/libtest/: CuTest.h  assert.h  masking.h  testutils.h  tokens.h
include/onkstd/: int.h  llist.h  merge_sort.h  queue.h  vec.h
include/utils/: queue.h  vec.h
lang/: example.onk  fibonacci.onk  first.ka  todo.onk
lang/examples/: expr.onk  run_me.clonk
lang/stdlib/: int.onk  prelude.onk  string.onk
lang/tests/: func_def.onk  nested_cond.onk  run_me.clonk
lang/tests/expr/: binary.onk  binops.onk  fcall.onk  multiexpr.onk  nested_expr.onk  order_precendence.onk  uniary.onk  unitary.onk
lang/tests/expr/fn_call/: nested.onk
src/: AllTests.c  ast.c  ast.h  clonk.h  common.c  common.h  compile.c  compile.h  error.c  error.h  errors.rs  expr.c  expr.h  flycheck.rs  halp.rs  lexer.c  lexer.h  main.c  main.rs  parse.rs  prelude.c  prelude.h  repl.c  result  run_tests.c  semantic.rs  stages.c  tokens.rs
src/ast/: ast.h  handlers.c
src/core/: ast.c  ast.h  collection.c  common.c  common.h  expr.c  expr.h  infer_type_tree.h.c  int.c  lexer.c  lexer.h  syn.c  syn.h
src/lib/: hashmap.c  hashmap.h
src/libclonk/ast/: ast.h  handlers.c
src/libclonk/lexer/: debug.c  debug.h  helpers.c  lexer.c
src/libclonk/parser/: error.c  parser.c  predict.c  semantic_utils.c  semantics.c  utils.c  validate.c
src/libclonk/parser/lexer/tests/: lexer_tests.c
src/libclonk/parser/tests/: postfix.c  semantics.c
src/libclonk/runtime/: runtime.rs  vm.c  vm.h
src/libstdonk/: chunked_array.c  dequeue.c  linked_list.c  list.c  queue.c  sort_merge.c  str.c  vec.c
src/libtest/: CuTest.c  build_mask.c  corelib.c  mask_assert.c  testutils.c  textutil.c  tokens.c
src/libtest/CuTest/: CuStr.c  CuTest.c  suite.c
src/libtest/tests/: CuTestTest.c  test_assert.c  test_mask.c
src/onkstd/: collection.c  int.c
src/onkstd/sort/: sort_merge.c  test.c
src/onkstd/vec/: vec.c
src/parser/: ast.c  ast.h  debug.c  error.c  error.h  expr.c  expr.h  expr_debug.c  expr_debug.h  handlers.c  lexer.c  lexer.h  parser.c  parser.h  predict.c  predict.h  private.h  program.c  program.h  semantic_utils.c  semantics.c  synthetize.c  synthetize.h  utils.c  utils.h  validate.c
src/parser/expr/: builder.c  builder.h  debug.c  debug.h  error.c  expect.c  expect.h  expr.c  expr.h  handlers.c  handlers.h  helpers.c  helpers.h  pool.c  pool.h  predict.c  predict.h  synth.c  utils.c  utils.h
src/parser/lexer/: debug.c  debug.h  helpers.c  helpers.h  lexer.c  lexer.h  predict.c
src/parser/lexer/tests/: harness.c  helpers.c  lexer_tests.c
src/parser/tests/: assignment.c  common.h  semantics.c
src/parser/tests/input/logical_operators/: indexing.c
src/parser/tests/input/sets/: group.c
src/parser/validator/: predict.c  predict.h  private_validator.h  utils.c
src/productions/: cross_populate.c  cross_populate.h  syn.c  syn.h
src/runtime/: isa.h  vm.c  vm.h
src/tests/: expr_tests.c  lexer_tests.c  run_tests.c
src/tests/libclonk/lexer/: harness.c  lexer_tests.c
src/tests/libclonk/parser/: arithmetic.c  block.c  map.c  parser.c  semantics.c
src/tests/libstdonk/: llist.c  merge_sort.c  queue.c  vec.c
src/tests/libtest/: CuTestTest.c  test_assert.c  test_mask.c
src/utils/: queue.c  queue.h  vec.c  vec.h
src/wasm/: interface.c
tests/: bug_fix.c  common.c  common.h  expr_tests.c  lexer_helpers.c  lexer_tests.c  queue.c  run_tests.c  testutils.c  testutils.h  testutils_tests.c  vec.c
tests/expr/: arithmetic.c  assignment.c  expr_cmp.c  fncall.c  fnmask.c  postfix.c  swap.c
tests/expr/sets/: block.c  group.c  list.c  map.c  tuple.c
tests/include/: CuTest.h
tests/lexer/: lexer_helpers.c  lexer_tests.c
tests/src/onkstd/: vec.c
tests/src/sets/: tuple.c
tests/test_tests/: CuTestTest.c  testutils_tests.c
